Update login form action to point to /adminlogin

--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
   <body>
     <div class="login-container">
       <h2>ESP32 Firewall Login</h2>
-      <form action="/login" method="POST" id="loginForm">
+      <form action="/adminlogin" method="POST" id="loginForm">
         <div class="form-group">
           <label for="username">Username:</label>
           <input type="text" id="username" name="username" placeholder="Enter username" required>
